<resources>
    <string name="app_name">HelloWorld-Kotlin</string>
    <string name="to">to</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="i_am_first_layer">first level</string>
    <string name="i_am_second_layer">second level</string>
    <string name="welcome">welcome</string>
    <string name="hello">hello</string>
    <string name="hello_2">Hello!</string>
    <string name="button_1">button 1</string>
    <string name="button_2">button 2</string>
    <string name="button_3">button 3</string>
    <string name="apractice">Android practice</string>
    <string name="button_4">button 4</string>
    <string name="button_5">button 5</string>
    <string name="button_7">button 7</string>
    <string name="button_8">button 8</string>
    <string name="button_9">button 9</string>
    <string name="button_10">button 10</string>
    <string name="reminder">reminder</string>
    <string name="done">done</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="fogot_password">Forgot password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="sign_up_with_email">Sign Up with E-mail</string>
    <string name="pick_contact">pick_contact</string>
    <string name="logo">logo</string>
    <string name="facebook_button">facebook_button</string>
    <string name="twitter_button">twitter_button</string>
    <string name="fragment">fragment</string>
    <string name="android">Android</string>
    <string name="java">Java</string>
    <string name="java_introduce" translatable="false">Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="android_introduce" translatable="false">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="recyclerview" translatable="false">RecyclerView</string>
    <string name="aiolos" translatable="false">Aiolos</string>
    <string name="avatar">avatar</string>
    <string name="have_been_to_the_bottom">Have been to the bottom</string>
    <string name="tips_shown">tips:
Click "I know" and no longer prompt</string>
    <string name="tips_not_shown">Welcome back</string>
    <string name="i_know">I Know</string>
    <string name="shared_preference" translatable="false">SharedPreference</string>
    <string name="add_tweet">Add Tweet</string>
    <string name="fetch_tweet" translatable="false">Fetch Tweet</string>
    <string name="compose" translatable="false">Compose</string>
    <string name="dwukropek" translatable="false">&#160;:</string>
</resources>