<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="148.9dp"
        android:layout_height="50.3dp"
        android:layout_marginTop="@dimen/dimen_88"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/dimen_250"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_edittext"
        android:hint="@string/username"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/dimen_250"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext"
        android:hint="@string/password"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"></EditText>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="21dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"></CheckBox>

    <TextView
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="22.5dp"
        android:text="@string/remember_me"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37.5dp"
        android:layout_marginTop="22.5dp"
        android:text="@string/fogot_password"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/remember_me"
        app:layout_constraintTop_toBottomOf="@id/password"></TextView>

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/dimen_250"
        android:layout_height="wrap_content"
        android:layout_marginTop="22.5dp"
        android:background="@drawable/deep_blue_button"
        android:text="@string/login"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remember_me"></Button>

    <TextView
        android:id="@+id/or_connect_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26.5dp"
        android:text="@string/or_connect_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"></TextView>

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="@dimen/dimen_120"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginTop="29.5dp"
        android:background="@drawable/facebook_button"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/or_connect_with"></ImageButton>

    <ImageButton
        android:layout_width="@dimen/dimen_120"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginTop="29.5dp"
        android:background="@drawable/twitter_button"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/or_connect_with"

        ></ImageButton>

    <Button
        android:layout_width="@dimen/dimen_250"
        android:layout_height="wrap_content"
        android:layout_marginTop="85.5dp"
        android:background="@drawable/white_button"
        android:text="@string/sign_up_with_email"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>