<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:padding="10dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/button_1"
                android:gravity="center"
                android:backgroundTint="@color/gray"> </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/button_2"
                android:gravity="center"
                android:backgroundTint="@color/gray"> </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/button_3"
                android:gravity="center"
                android:backgroundTint="@color/gray"> </Button>
        </LinearLayout>
    </ScrollView>
</FrameLayout>